validator_derive/tests/compile-fail/must_match/field_type_doesnt_match.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(must_match = "password2")]
    password: String,
    password2: i32,
}

fn main() {}
