validator_derive/tests/compile-fail/must_match/field_type_doesnt_match.stderr
error: proc-macro derive panicked
 --> $DIR/field_type_doesnt_match.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = help: message: Invalid argument for `must_match` validator of field `password`: types of field can't match
